--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,10 @@
-name: Herring Cove
-author: Herring Cove
+name: 미루고 미루다
+author: Jinhee Kang
 baseurl: /herring-cove
 description: theme for jekyll
-github: http://www.github.com/arnp
-twitter: http://www.twitter.com/
-facebook: http://www.facebook.com
+github: http://www.github.com/JINHEE-KANG
 linkedin: http://www.linkedin.com
-email: rnpatel[at]me.com
+email: genie0301@naver.com
 location: 42°2'16"N   70°12'47"W
 disqus: diqus-username
 
