--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 name: 미루고 미루다
 author: Jinhee Kang
 baseurl: /herring-cove
-description: theme for jekyll
+description: 미루고 미루다 작성하는 AI/DS 블로그
 github: http://www.github.com/JINHEE-KANG
 linkedin: http://www.linkedin.com
 email: genie0301@naver.com
