--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,11 @@
 name: 미루고 미루다
 author: Jinhee Kang
-baseurl: /herring-cove
+baseurl: https://jinhee-kang.github.io
 description: 미루고 미루다 작성하는 AI/DS 블로그
 github: http://www.github.com/JINHEE-KANG
+twitter: http://www.twitter.com
 linkedin: http://www.linkedin.com
+facebook: http://www.facebook.com
 email: genie0301@naver.com
 location: 42°2'16"N   70°12'47"W
 disqus: diqus-username
