--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: 미루고 미루다
-author: Jinhee Kang
+author: Herring Cove
 baseurl: https://jinhee-kang.github.io
 description: 미루고 미루다 작성하는 AI/DS 블로그
 github: http://www.github.com/JINHEE-KANG
