--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ twitter: http://www.twitter.com
 linkedin: http://www.linkedin.com
 facebook: http://www.facebook.com
 email: genie0301@naver.com
-location: 42°2'16"N   70°12'47"W
-disqus: diqus-username
+location: 37°34'00"N   126°58'41"E
+disqus: diqus-JINHEE-KANG
 
 ##Make sure to edit the above fields, especially for disqus.
 
