--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 name: 미루고 미루다
 author: Herring Cove
 baseurl: https://jinhee-kang.github.io
-description: 미루고 미루다 작성하는 블로그
+description: 미루고 미루다 쓰는 블로그
 github: http://www.github.com/JINHEE-KANG
 twitter: http://www.twitter.com
 linkedin: http://www.linkedin.com
