--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 name: 미루고 미루다
 author: Herring Cove
-baseurl: /jinhee-kang.github.io
+baseurl: https://jinhee-kang.github.io
 description: 미루고 미루다 쓰는 블로그
 github: http://www.github.com/JINHEE-KANG
 twitter: http://www.twitter.com
